--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
         <div id="pregunta-container" class="pregunta-container oculto">
             <div id="pregunta" class="pregunta"></div>
             <img id="imagen-pregunta" class="imagen-pregunta oculto" alt="Imagen de la Pregunta">
-            <input type="text" id="respuesta" class="input-respuesta" placeholder="Escribe tu respuesta...">
-            <button id="enviar-respuesta-btn" class="btn">Enviar</button>
+            <div id="opciones" class="opciones">
+                <!-- Botones de opciones -->
+                <button class="btn opcion-btn">Opción 1</button>
+                <button class="btn opcion-btn">Opción 2</button>
+                <button class="btn opcion-btn">Opción 3</button>
+            </div>
             <div id="mensaje" class="mensaje"></div>
             <img id="icono-mensaje" class="icono-mensaje oculto">
         </div>
